--- a/rusttracks-web/static/index.html
+++ b/rusttracks-web/static/index.html
@@ -30,17 +30,18 @@
                         <div>
                             <p class="option-title">Start Date</p>
                         </div>
-                        <input type="date" name="date" class="calander-selection" id="start-date-input">
+                        <input type="datetime-local" name="date" class="calander-selection" id="start-date-input">
                     </div>
                     <div class="data-choice" id="end-date">
                         <div>
                             <p class="option-title">End Date</p>
                         </div>
-                        <input type="date" name="date" class="calander-selection" id="end-date-input">
+                        <input type="datetime-local" name="date" class="calander-selection" id="end-date-input">
                     </div>
                 </div>
                 <div>Min accuracy</div>
-                <input type="range" min="50" max="500" value="100">
+                <input id="acc-slider" type="range" min="50" max="500" value="100">
+                <div id="acc-value">100m</div>
                 <div id="display-options-wrapper">
                     <div style="padding:3px;">Display Options</div>
                     <div id="button-holder">
@@ -55,6 +56,18 @@
         </div>
     </div>
     <script type="text/javascript">
+
+        let today = new Date();
+        let yesterday = new Date(new Date().setDate(today.getDate() - 1));
+
+        today = today.toISOString().slice(0, -8);
+        yesterday = yesterday.toISOString().slice(0, -8);
+        document.getElementById('start-date-input').value = yesterday;
+        document.getElementById('end-date-input').value = today;
+        let accValue = document.getElementById('acc-value');
+
+        let accSlider = document.getElementById("acc-slider");
+
         var map = new ol.Map({
             target: 'map',
             layers: [
@@ -69,117 +82,188 @@
         });
 
 
-        // const style = {
-        //     'Point': new ol.Style({
-        //         image: new ol.CircleStyle({
-        //             fill: new ol.Fill({
-        //                 color: 'rgba(255,255,0,0.4)',
-        //             }),
-        //             radius: 5,
-        //             stroke: new ol.Stroke({
-        //                 color: '#ff0',
-        //                 width: 1,
-        //             }),
-        //         }),
-        //     }),
-        //     'LineString': new ol.Style({
-        //         stroke: new ol.Stroke({
-        //             color: '#f00',
-        //             width: 3,
-        //         }),
-        //     }),
-        //     'MultiLineString': new ol.Style({
-        //         stroke: new ol.Stroke({
-        //             color: '#0f0',
-        //             width: 3,
-        //         }),
-        //     }),
-        // };
-
-
+        let vectorDotsLayer;
+        let vectorPathLayer;
+        var markers = [];
         function getLocations() {
-            axios.get("http://localhost:8000/api/locations")
-                .then(response => {
-                    var markers = [];
-                    for (let i = 0; i < response.data.length; i++) {
+            map.removeLayer(vectorDotsLayer);
+            map.removeLayer(vectorPathLayer);
 
+            start_date_input = document.getElementById('start-date-input').value;
+            end_date_input = document.getElementById('end-date-input').value;
+
+            axios.get("http://localhost:8000/api/locations", { params: { start_date: start_date_input, end_date: end_date_input } })
+                .then(response => {
+                    let data = response.data;
+                    for (let x in data) {
+                        let transformed_point = ol.proj.transform([data[x].lon, data[x].lat], 'EPSG:4326',
+                            'EPSG:3857')
+                        let geom_point = new ol.geom.Point(transformed_point);
                         markers.push(new ol.Feature({
-                            geometry: new ol.geom.Point(ol.proj.transform([response.data[i].lon, response.data[i].lat], 'EPSG:4326',
-                                'EPSG:3857')),
-                            // name: 'test',
-                            timestamp: response.data[i].tst,
+                            geometry: geom_point,
+                            timestamp: data[x].tst,
+                            accuracy: data[x].acc,
                         }));
 
                     };
 
-                    var vectorSource = new ol.source.Vector({
-                        features: markers
-                    });
-
-                    const fill = new ol.style.Fill({
-                        color: 'rgba(255,255,255,0.4)',
-                    });
-                    const stroke = new ol.style.Stroke({
-                        color: '#3399CC',
-                        width: 1.25,
-                    });
-
-                    var iconStyle = new ol.style.Style({
-                        image: new ol.style.Circle({
-                            fill: fill,
-                            stroke: stroke,
-                            radius: 5
-                        }),
-                        fill: fill,
-                        stroke: stroke
-                    });
-
-
-                    var vectorLayer = new ol.layer.Vector({
-                        source: vectorSource,
-                        style: iconStyle
-                    });
-
-                    map.addLayer(vectorLayer);
-                    console.log(markers);
-                    map.setView(new ol.View({
-                        center: markers[0].getGeometry().flatCoordinates,
-                        zoom: 15
-                    }))
+                    createDotLayer(markers);
+                    createPathLayer(markers);
+                    map.addLayer(vectorDotsLayer);
+                    bounceToInitialMarker(markers);
 
                 })
 
         };
 
-        function doBounce(location) {
-            // bounce by zooming out one level and back in
-            var bounce = ol.animation.bounce({
-                resolution: map.getView().getResolution() * 2
+        function bounceToInitialMarker(markers) {
+            if (markers.length === 0) {
+                return;
+            }
+            let init_marker = markers[0].getGeometry().flatCoordinates
+            const animationDuration = 750;
+            map.getView().animate(
+                { zoom: 10, duration: animationDuration },
+                { center: init_marker, duration: animationDuration },
+                { zoom: 15, duration: animationDuration }
+
+            );
+        }
+
+        function calculateTimeDistance(markers) {
+            if (markers.length > 1) {
+                return markers[markers.length - 1].get('timestamp') - markers[0].get('timestamp');
+            } else {
+                return 0;
+            }
+        }
+
+        function* calculateColour(startColour, endColour, step) {
+            for (let i = 0; i < step; i++) {
+                yield 'rgba(' +
+                    + Math.round(endColour[0] + (startColour[0] - endColour[0]) * (i / step)) + ','
+                    + Math.round(endColour[1] + (startColour[1] - endColour[1]) * (i / step)) + ','
+                    + Math.round(endColour[2] + (startColour[2] - endColour[2]) * (i / step)) + ','
+                    + (endColour[3] + (startColour[3] - endColour[3]) * (i / step))
+                    + ')';
+            }
+        }
+
+        function drawStyle(feature) {
+            var type = feature.getGeometry().getType();
+            var lineStrings = [];
+            var styles = [];
+            if (type === "LineString") {
+                lineStrings = [feature.getGeometry()];
+            } else if (type === "MultiLineString") {
+                lineStrings = feature.getGeometry().getLineStrings();
+            }
+            lineStrings.forEach(function (lineString) {
+                var coordinates = lineString.getCoordinates();
+                let colour_gen = calculateColour(ol.color.fromString('blue'), ol.color.fromString('red'), coordinates.length)
+                for (var i = 0; i < coordinates.length - 1; i++) {
+                    let lineColour = colour_gen.next().value;
+                    styles.push(
+                        new ol.style.Style({
+                            geometry: new ol.geom.LineString(coordinates.slice(i, i + 2)),
+                            stroke: new ol.style.Stroke({
+                                color: lineColour,
+                            })
+                        })
+                    );
+                }
             });
-            // start the pan at the current center of the map
-            var pan = ol.animation.pan({
-                source: map.getView().getCenter()
-            });
-            map.beforeRender(bounce);
-            map.beforeRender(pan);
-            // when we set the center to the new location, the animated move will
-            // trigger the bounce and pan effects
-            map.getView().setCenter(location);
+
+            return styles;
         }
 
         function displayOption(clickedBtn) {
             buttonToChange = clickedBtn == "dots" ? "path" : "dots"
-            console.log(buttonToChange)
             document.getElementById(buttonToChange).setAttribute("class", "display-option-btn");
             document.getElementById(clickedBtn).setAttribute("class", "display-option-btn-clicked");
+            if (clickedBtn == "path") {
+                map.removeLayer(vectorDotsLayer);
+                map.addLayer(vectorPathLayer);
+            } else if (clickedBtn == "dots") {
+                map.removeLayer(vectorPathLayer);
+                map.addLayer(vectorDotsLayer);
+            } else if (clickedBtn == "pathanddots") {
+                map.addLayer(vectorPathLayer);
+                map.addLayer(vectorDotsLayer);
+            }
         }
 
+        function createDotLayer(markers) {
+            var vectorSource = new ol.source.Vector({
+                features: markers
+            });
+
+            const fill = new ol.style.Fill({
+                color: 'rgba(0,213,255,0.4)',
+            });
+            var iconStyle = new ol.style.Style({
+                image: new ol.style.Circle({
+                    fill: fill,
+                    radius: 5,
+
+                }),
+                fill: fill,
+            });
+
+
+            vectorDotsLayer = new ol.layer.Vector({
+                source: vectorSource,
+                style: iconStyle
+            });
+
+        }
+        function updateDotLayer(markers) {
+
+            var vectorSource = new ol.source.Vector({
+                features: markers
+            });
+            vectorDotsLayer.setSource(vectorSource);
+        }
+
+        function geomPointsFromMarkers(markers) {
+            let geom_points = [];
+            for (let i = 0; i < markers.length; i++) {
+                geom_points.push(markers[i].getGeometry().flatCoordinates);
+            }
+            return geom_points;
+
+        }
+        function createPathLayer(markers) {
+            let geomPoints = geomPointsFromMarkers(markers);
+            var geomLineStrings = new ol.geom.MultiLineString([geomPoints]);
+            var featureGeom = new ol.Feature({
+                name: "Path",
+                geometry: geomLineStrings,
+            });
+            var vectorPathSource = new ol.source.Vector({});
+            vectorPathSource.addFeature(featureGeom);
+            vectorPathLayer = new ol.layer.Vector({
+                source: vectorPathSource,
+                style: feature => drawStyle(feature)
+            });
+        }
+
+        function updatePathLayer(markers) {
+            let geomPoints = geomPointsFromMarkers(markers)
+            var geomLineStrings = new ol.geom.MultiLineString([geomPoints]);
+            var featureGeom = new ol.Feature({
+                name: "Path",
+                geometry: geomLineStrings,
+            });
+            var vectorPathSource = new ol.source.Vector({});
+            vectorPathSource.addFeature(featureGeom);
+            vectorPathLayer.setSource(vectorPathSource);
+        }
 
         // Collapsible 
         var coll = document.getElementsByClassName("collapsible");
-        var i;
 
-        for (i = 0; i < coll.length; i++) {
+        for (let i = 0; i < coll.length; i++) {
             coll[i].addEventListener("click", function () {
                 this.classList.toggle("active");
                 document.getElementById("header").classList.toggle("collapsed");
@@ -193,6 +277,25 @@
         }
 
 
+        function createPopup(feature) {
+            let coords = ol.proj.toLonLat(feature.getGeometry().flatCoordinates);
+            let inner = `
+                <div id="timestamp">
+                    <p class="popup-subtitle"> TIMESTAMP </p>
+                    <p class="popup-values"> ${new Date(feature.get('timestamp') * 1000).toUTCString()} </p>
+                </div >
+                <div id="coords">
+                    <p class="popup-subtitle"> LOCATION </p>
+                    <p class="popup-values"> (${coords[0].toFixed(6)}, ${coords[1].toFixed(6)}) </p>
+                </div>
+                <div id="accuracy">
+                    <p class="popup-subtitle"> ACCURACY </p>
+                    <p class="popup-values"> ${feature.get('accuracy')}m </p>
+                </div>
+            `
+            popupContent.innerHTML = inner;
+        }
+
 
         const container = document.getElementById('popup');
         const popupContent = document.getElementById('popup-content');
@@ -202,30 +305,39 @@
             stopEvent: false,
             offset: [0, -10],
         });
-        // popup.setPosition(coordinate);
         map.addOverlay(popup);
-
 
         map.on('pointermove', (event) => {
             var feature = map.forEachFeatureAtPixel(event.pixel,
-                function (feature) {
+                (feature, layer) => {
                     return feature;
-                });
-            if (feature) {
-                console.log(feature)
-                // TODO: Show features
+                }, { hitTolerance: 1 });
+            if (feature && feature.get('name') != "Path") {
                 let coords = feature.getGeometry().flatCoordinates;
-                popupContent.innerHTML = ol.proj.toLonLat(coords);
+                createPopup(feature);
+                container.style.visibility = 'visible';
                 popup.setPosition(coords);
             } else {
-                // container.destroy
-                console.log("here")
                 popupContent.innerHTML = "";
+                container.style.visibility = 'hidden';
             }
         });
 
+        accSlider.addEventListener('input', function () {
+            accValue.innerHTML = `${accSlider.value}m`;
+        });
+
+        accSlider.addEventListener('change', function () {
+            if (markers.length > 1) {
+                let filtered = markers.filter(marker => marker.get('accuracy') <= accSlider.value);
+                updateDotLayer(filtered);
+                updatePathLayer(filtered);
+            }
+        });
+
+        getLocations();
+
     </script>
-    <!-- <script type="module" src="main.js"></script> -->
 </body>
 
 </html>
